--- a/Draw/Controller/Contest/StatementView.xib
+++ b/Draw/Controller/Contest/StatementView.xib
@@ -37,10 +37,10 @@
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUIImageView" id="379251647">
+					<object class="IBUIImageView" id="748535968">
 						<reference key="NSNextResponder" ref="421994044"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{15, 25}, {290, 405}}</string>
+						<string key="NSFrame">{{9, 20}, {302, 420}}</string>
 						<reference key="NSSuperview" ref="421994044"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="54689904"/>
@@ -55,13 +55,13 @@
 					<object class="IBUIWebView" id="54689904">
 						<reference key="NSNextResponder" ref="421994044"/>
 						<int key="NSvFlags">301</int>
-						<string key="NSFrame">{{20, 43}, {280, 380}}</string>
+						<string key="NSFrame">{{20, 45}, {280, 380}}</string>
 						<reference key="NSSuperview" ref="421994044"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="167940551"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
-							<int key="NSColorSpace">1</int>
-							<bytes key="NSRGB">MSAxIDEAA</bytes>
+							<int key="NSColorSpace">3</int>
+							<bytes key="NSWhite">MCAwAA</bytes>
 						</object>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIDataDetectorTypes">1</int>
@@ -108,7 +108,7 @@
 				<string key="NSFrameSize">{320, 460}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="379251647"/>
+				<reference key="NSNextKeyView" ref="748535968"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">1</int>
 					<bytes key="NSRGB">MC4yODIzNTI5NDEyIDAuMjc0NTA5ODAzOSAwLjI0NzA1ODgyMzUAA</bytes>
@@ -160,7 +160,7 @@
 						<reference key="object" ref="421994044"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="54689904"/>
-							<reference ref="379251647"/>
+							<reference ref="748535968"/>
 							<reference ref="167940551"/>
 						</array>
 						<reference key="parent" ref="0"/>
@@ -172,7 +172,7 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">9</int>
-						<reference key="object" ref="379251647"/>
+						<reference key="object" ref="748535968"/>
 						<reference key="parent" ref="421994044"/>
 					</object>
 					<object class="IBObjectRecord">
