--- a/Draw/Controller/Shop/VendingController~ipad.xib
+++ b/Draw/Controller/Shop/VendingController~ipad.xib
@@ -988,6 +988,7 @@
 				<string key="78.CustomClassName">HKGirlFontLabel</string>
 				<string key="78.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="82.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="86.CustomClassName">UICustomPageControl</string>
 				<string key="86.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
